--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prettier-plugin-tailwindcss": "^0.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.47.0"
+    "react-hook-form": "^7.47.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
