--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.10.7",
     "firebase": "^10.4.0",
     "next": "13.5.4",
     "prettier": "^3.0.3",
@@ -16,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "daisyui": "^3.9.3",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
