--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@tanstack/react-table": "^8.10.7",
     "firebase": "^10.4.0",
+    "firebase-admin": "^11.11.0",
     "next": "13.5.4",
+    "nookies": "^2.5.2",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "react": "^18",
