--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/dashboard/index.jsx", "src/pages/signup.tsx", "src/pages/login.tsx", "src/pages/dashboard/[userId]/addrequest.jsx", "src/firebase/firebase-admin-config.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/dashboard/index.jsx", "src/pages/signup.tsx", "src/pages/login.tsx", "src/pages/dashboard/[userId]/addrequest.tsx", "src/firebase/firebase-admin-config.tsx"],
   "exclude": ["node_modules"]
 }
