--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@types/node": "^20",
